# polars-intro

./: .gitignore  pyproject.toml  requirements.txt  scratch1.ipynb
